Enhance user details loading with role authority